container-max-widths retouch

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,11 +8,11 @@ $grid-breakpoints: (
 );
 
 $container-max-widths: (
-  sm: 676px,
+  sm: 100%,
   md: 560px,
-  lg: 560px,
-  xl: 560px,
-  xxl: 560px
+  lg: 567px,
+  xl: 572px,
+  xxl: 576px
 );
 
 .in__container {
